[package]
name = "wd14-tagger"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = "1.16.3"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15"
image = { version = "0.24", features = ["png", "jpeg"] }
egui = "0.23"
eframe = "0.23"
clap = { version = "4.5", features = ["derive"] }
hf-hub = "0.4.3"