[package]
name = "wd14-tagger"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = { version = "2.0.0-rc.12", features = ["ndarray","cuda","load-dynamic"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["raw_value"] }
ndarray = "0.17"
image = { version = "0.24", features = ["png", "jpeg"] }
egui = "0.23"
eframe = "0.23"
clap = { version = "4.5", features = ["derive"] }
hf-hub = "0.4.3"
